force-app/main/default/objects/Identification_Detail__c/Identification_Detail__c.object-meta.xml
<CustomObject>
    <label>Identification Detail</label>
    <nameField>
        <displayFormat>IDN-{0000}</displayFormat>
        <label>Identification Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identification Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>