force-app/main/default/objects/Identification_Detail__c/fields/Number_of_time_Calendarific_API_called__c.field-meta.xml
<CustomField>
    <fullName>Number_of_time_Calendarific_API_called__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of time Calendarific API called</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>