force-app/main/default/objects/Identification_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Identification_Number__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Gender__c</columns>
    <columns>Citizenship__c</columns>
    <columns>Number_of_time_Calendarific_API_called__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>